# flappy-bird-rl

./: .gitignore  agent.py  agent_test.py  env_factory.py  episode.py  episode_test.py  eval.py  main.py  pyproject.toml  train.py
logs/: monitor_0.csv.monitor.csv  monitor_1.csv.monitor.csv  monitor_2.csv.monitor.csv  monitor_3.csv.monitor.csv  monitor_4.csv.monitor.csv  monitor_5.csv.monitor.csv  monitor_6.csv.monitor.csv  monitor_7.csv.monitor.csv
logs/tensorboard/DQN_1/: events.out.tfevents.1769326102.ly232s-iMac-Pro.local.93193.0
logs/tensorboard/DQN_2/: events.out.tfevents.1769326473.ly232s-iMac-Pro.local.94931.0
scripts/: plot_learning_curve.py
